turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:21: error: '<-' expected but ')' found.
  for(i<1 to 4)
              ^HouseMany:41: error: illegal start of simple expression
} 
^